<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wiki of the Storm</string>
    <string name="title_section1">News</string>
    <string name="title_section2">Characters</string>
    <string name="title_section3">Favorites</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Version</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="connection_error">Connection Error</string>
    <string name="xml_error">Xml Parsing Error</string>
    <string name="page_title">Title</string>
    <string name="updated">Updated:</string>
    <string name="url_news_blizzard">http://eu.battle.net/heroes/en/blog/</string>
    <string name="error_retrieve_database">Connection to database impossible</string>

    <!--<color name="background_date_news">#4055de</color>-->
    <!--<color name="background_date_news">#081535</color>-->
    <color name="background_date_news">#4b1fbd</color>
    <!--<color name="background_news">#090011</color>-->
    <color name="background_news">#080e1a</color>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="histoire">Story</string>
    <string name="type">Type</string>
    <string name="origine">Origin</string>
    <string name="skills">Skills</string>
    <string name="basique">Basiques</string>
    <string name="heroique">Heroiques</string>
    <string name="traits">Traits</string>
    <string name="talents">Talents</string>
    <string name="noconnection">Impossible to connect to the news server</string>
    <string name="noinitfavoris">Erreur lors de l initialisation des favoris</string>
    <string name="addfavoris">Favoris ajouté</string>
    <string name="addError">Erreur lors de l ajout</string>
    <string name="resetfavoris">Favoris remis a zéro</string>
    <string name="delfavoris">Favoris supprimé</string>
    <string name="delerror">Erreur lors de la suppresion</string>
    <string name="version">Version 0.1</string>

</resources>
