<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.fancysoftware.wiki_of_the_storm.personnages_Fragment"
    android:background="#0d0119"
    android:padding="@dimen/abc_action_bar_default_padding_material">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#090011">
        <TextView android:id="@+id/nom_perso" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"
            android:textIsSelectable="false"
            android:textSize="22dp"
            android:textColor="#fff"
            android:textColorHighlight="#65d2fb"
            android:shadowColor="#65d2fb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/origine"
            android:id="@+id/origine_perso"
            android:textColor="#8eb1bc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:id="@+id/type_perso"
            android:textColor="#8eb1bc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/histoire"
            android:textSize="20dp"
            android:textColor="#36ffff"
            android:paddingTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/histoire"
            android:id="@+id/histoire_perso"
            android:textColor="#8eb1bc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skills"
            android:textSize="20dp"
            android:textColor="#36ffff"
            android:paddingTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basique"
            android:textSize="18dp"
            android:textColor="#8eb1bc"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/skillsbasiques"
            android:orientation="horizontal">
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heroique"
            android:textSize="18dp"
            android:textColor="#8eb1bc"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/skillsheroiques"
            android:orientation="horizontal">
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
